Release 4.15
	- improve support for private datasets: fix custom HTTP headers
	  with CKAN URL munging; add HXL_HTTP_HEADER and --http-header
	  support for all scripts
	- add hxl.io.HXLIOException as base class for all HXL I/O-related
	  exceptions, with an optional url property
	- add hxl.io.HXLAuthorizationException

2019-03-04 Release 4.14
	- report external validation errors (e.g. missing taxonomy)
	  separately (and don't invalidate the dataset)
	- improve date parsing, and fix bug in borderline case (month but
	  no year)
	- stability improvements for formulas (including "NaN" result for DIV0)
	- efficiency improvements in validation tests
	- fix a bug when reading an empty dataset
	- fix a DIV0 bug in validation
	- fix lexer conflict with jsonpath_rw package

2019-02-06 Release 4.13.2
	- rewrite, correct, and simplify formula parsing
	- fix bug in add_column filter
	- add round() function to formulas

2019-01-31 Release 4.13.1
	- fix setup.py to include new hxl.formulas package in the dist files (oops!)

2019-01-31 Release 4.13
	- add spreadsheet-style formulas calculated from a row's
	  contents: https://github.com/HXLStandard/hxl-proxy/wiki/Row-formulas
	- update add-column filter to support formula substitutions
	- improve error reporting for private HDX resources
	- fix bug with is min/is max aggregator and mixed datatypes
	- fix date normalisation to preserve original value (and log an
	  error) if parsing fails
	- bugfix for validation error when no row and/or column present

2018-12-03 Release 4.12
	- added concat() aggregator for CountFilter
	- added data_hash and columns_hash properties for
	  hxl.model.Dataset, together with hxlhash command-line script
	- fixed parsing of YYYY-MM-DD hh:mm:ss SQL dates
	- support opening zipped CSV files (thanks to Orest Dubay)

2018-08-31 Release 4.11
	- fixed date-cleaning bug when reading a filter definition from
	  JSON
	- added an option to send custom HTTP headers with a request for a